--- a/memory-game/css/style.css
+++ b/memory-game/css/style.css
@@ -1,3 +1,31 @@
 body{
     background-color: rgb(10, 56, 10);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+}
+.header{
+    height: 200px;
+    width: 1500px;
+    background-image: url("../images/memory-game.png");
+}
+
+.start-container{
+    text-align: center;
+   }
+.start-container h1{
+    color:white;
+    
+}
+
+.card{
+    display: flex;
+    margin: aouto;
+    height: 100px;
+    width: 50px;
+    border: 1px, solid,black;
+    background-color: wheat;
 }
