--- a/memory03/css/style.css
+++ b/memory03/css/style.css
@@ -14,8 +14,8 @@ body{
 
 .card{
     height: 170px;
-    /* background-image: url('../images/thinking-cap.jpg');
-    background-size: contain; */
+    /* background-image: url('../images/thinking-cap.jpg'); */
+    background-size: contain;
     padding: 2px;
     margin: 5px;
     background-color: wheat;
