--- a/memoryGame/css/style.css
+++ b/memoryGame/css/style.css
@@ -8,8 +8,8 @@ body{
 
 .card{
     height: 170px;
-    /* background-image: url('../images/thinking-cap.jpg');
-    background-size: contain; */
+    /* background-image: url('../images/thinking-cap.jpg'); */
+    background-size: cover;
     padding: 2px;
     margin: 5px;
     background-color: wheat;
