--- a/memoryGame/css/style.css
+++ b/memoryGame/css/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: rgb(10, 56, 10);
+    
 }
 img{
     height: 170px;
@@ -18,4 +19,15 @@ img{
     background-color: wheat;
     border: 1.5px, solid, salmon;
     
+}
+.playAgain{
+    position : fixed;
+    top :30%;
+    left: 40%;
+    background-image: url("../images/memory-game.png");
+    background-position: center;
+    height: 200px;
+    width: 20%;
+    display: none;
+    text-align: center;
 }
