--- a/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/registration/register.html
+++ b/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/registration/register.html
@@ -1,8 +1,21 @@
+{% extends 'home'%}
+
 {% block content %}
-<h1>Create an account</h1>
-<form action="{% url 'register’ %}" method="post">
+<h2>Sign up</h2>
+<form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Create the account">
+    {% for field in form %}
+    <p>
+        {{ field.label_tag }}<br>
+        {{ field }}
+        {% if field.help_text %}
+        <small style="color: grey">{{ field.help_text }}</small>
+        {% endif %}
+        {% for error in field.errors %}
+        <p style="color: red">{{ error }}</p>
+        {% endfor %}
+    </p>
+    {% endfor %}
+    <button type="submit">Sign up</button>
 </form>
 {% endblock %}
