css to register page

--- a/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/registration/login.html
+++ b/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/registration/login.html
@@ -27,7 +27,7 @@
           <a href="/oauth/login/twitter/"><img src="/static/socialBoard/images/twitter.png" title="Twitter"
               alt="Twitter"></a><br>
         </div>
-        <p class="message">Not registered? <a href="/static/socialBoard/templates/registration/register">Create an
+        <p class="message">Not registered? <a href="../register">Create an
             account</a></p>
       </form>
     </div>
