--- a/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/registration/register.html
+++ b/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/registration/register.html
@@ -1,21 +1,42 @@
-{% extends 'home'%}
+<head>
+    <link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/socialBoard/css/login.css">
+    <meta charset="UTF-8">
+    <title>Biko's Billboard</title>
+    <link href="https://use.fontawesome.com/082397c0ed.css" media="all" rel="stylesheet">
+</head>
 
-{% block content %}
-<h2>Sign up</h2>
-<form method="post">
-    {% csrf_token %}
-    {% for field in form %}
-    <p>
-        {{ field.label_tag }}<br>
-        {{ field }}
-        {% if field.help_text %}
-        <small style="color: grey">{{ field.help_text }}</small>
-        {% endif %}
-        {% for error in field.errors %}
-        <p style="color: red">{{ error }}</p>
-        {% endfor %}
-    </p>
-    {% endfor %}
-    <button type="submit">Sign up</button>
-</form>
-{% endblock %}
+<body data-gr-c-s-loaded="true">
+    <div class="login-page">
+        <div class="form">
+            <h2>Sign up</h2>
+            <form method="post">
+                {% csrf_token %}
+                {% for field in form %}
+                <p>
+                    {{ field.label_tag }}<br>
+                    {{ field }}
+                    {% for error in field.errors %}
+                    <p style="color: red">{{ error }}</p>
+                    {% endfor %}
+                </p>
+                {% endfor %}
+                <div class="row">
+                    <span class="text-danger small"> </span>
+                </div>
+                <div class="row">
+                    <span class="text-danger small"> </span>
+                </div>
+                <button type="submit" class="btn btn-success">Sign up</button>
+                <div class="social-logos">
+                    <a href="/oauth/login/facebook/"><img src="/static/socialBoard/images/facebook.png" title="Facebook"
+                            alt="Facebook"></a><br>
+                    <a href="/oauth/login/github/"><img src="/static/socialBoard/images/github.png" title="GitHub"
+                            alt="GitHub"></a><br>
+                    <a href="/oauth/login/twitter/"><img src="/static/socialBoard/images/twitter.png" title="Twitter"
+                            alt="Twitter"></a><br>
+                </div>
+            </form>
+        </div>
+    </div>
+</body>
