--- a/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/base.html
+++ b/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/base.html
@@ -2,27 +2,31 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/socialBoard/css/login.css">
     <meta charset="UTF-8">
-    <title>Address Book</title>
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/contacts.js' %}"></script>
+    <title>Biko's Billboard</title>
+    <link href="https://use.fontawesome.com/082397c0ed.css" media="all" rel="stylesheet">
 </head>
 
-<body>
-    <div>
-        {% if user.is_authenticated %}
-        {{ user }}
-        <a href="{% url 'logout' %}">Logout</a>
-        {% else %}
-        <a href="{% url 'login' %}">Login</a>
-        {% endif %}
-    </div>
-    {% block content %}
 
-    
-    {% endblock %}
+
+<body data-gr-c-s-loaded="true">
+    <div class="login-page">
+        <h1>BILLBOARD</h1>
+        <div class="form">
+            <div>
+                {% if user.is_authenticated %}
+                {{ user }}
+                <a href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                <a href="{% url 'login' %}">Login</a>
+                {% endif %}
+            </div>
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
 </body>
 
 </html>
