--- a/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/new_post.html
+++ b/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/new_post.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>New Post</title>
 </head>
 <body>
-    <h1>blabla</h1>
+    <div class="container">
+        <div class="contact-form" method="post"
+    </div>
 
 </body>
 </html>
