--- a/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/base.html
+++ b/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/base.html
@@ -18,6 +18,7 @@
             <div>
                 {% if user.is_authenticated %}
                 {{ user }}
+                <a href="{% url 'login' %}">login</a>
                 <a href="{% url 'logout' %}">Logout</a>
                 {% else %}
                 <a href="{% url 'login' %}">Login</a>
