--- a/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/new_post.html
+++ b/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/new_post.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
+{%  load static %}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static 'socialBoard/css/style.css' %}">
     <title>New Post</title>
 </head>
+
 <body>
     <div class="container">
-        <div class="contact-form" method="post"
-    </div>
+        <div class="contact-form" >
+            <div class="container">
+                <p class="head">BILLBOARD</p>
 
+
+                <form id="person-form" action="/post/" method="POST">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" value="Submit" />
+                </form>
+        </div>
+
+        <script src="{% static 'socialBoard/js/socialBoard.js' %}"></script>
 </body>
+
 </html>
