--- a/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/registration/register.html
+++ b/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/registration/register.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" type="text/css" href="{% static 'SocialBoard/css/comon.css' %}">
    <link rel="stylesheet" type="text/css" href="{% static 'SocialBoard/css/login.css' %}">
    <meta charset="UTF-8">
-   <title>Biko's Billboard</title>
+   <title>Register Billboard</title>
 </head>
 <body>
 <div class="login-page">
@@ -25,5 +25,4 @@
 </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="{% static 'SocialBoard/js/register.js' %} "></script>
 </html>
