--- a/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/new_post.html
+++ b/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/new_post.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 {%  load static %}
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -17,14 +17,14 @@
                 <p class="head">BILLBOARD</p>
 
 
-                <form id="person-form" action="/post/" method="POST">
+                <form id="person-form" action="newpost/" method="POST">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <input type="submit" value="Submit" />
                 </form>
         </div>
 
-        <script src="{% static 'socialBoard/js/socialBoard.js' %}"></script>
+      
 </body>
 
 </html>
