--- a/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/base.html
+++ b/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/base.html
@@ -2,15 +2,14 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/socialBoard/css/login.css">
     <meta charset="UTF-8">
     <title>Biko's Billboard</title>
     <link href="https://use.fontawesome.com/082397c0ed.css" media="all" rel="stylesheet">
 </head>
-
-
-
 <body data-gr-c-s-loaded="true">
     <div class="login-page">
         <h1>BILLBOARD</h1>
@@ -27,9 +26,15 @@
                 {% endif %}
             </div>
             {% block content %}
-            {% endblock %}
+            {% endblock  %}
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d
 </body>
-
 </html>
