--- a/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/new_post.html
+++ b/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/new_post.html
@@ -12,19 +12,29 @@
 
 <body>
     <div class="container">
-        <div class="contact-form" >
-            <div class="container">
-                <p class="head">BILLBOARD</p>
+        <div class="newpost">
+            <div class="contact-form">
+                <div class="container">
+                    <p class="head">BILLBOARD ADD NEW POST</p>
+                    <fieldset class="center-block" id="newpostdiv">
+                        <legend>
+                            <p class="pubdate" id="newpostdate">8/08/2019</p>
+                        </legend>
 
 
-                <form id="person-form" action="newpost/" method="POST">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <input type="submit" value="Submit" />
-                </form>
+                        <form id="person-form" action="newpost/" method="POST">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <input type="submit" value="Submit" />
+                        </form>
+                </div>
+                <a href="{url 'templates/index'}">Back To posts</a>
+            </div>
         </div>
+        <br><br>
+        </fieldset>
+    </div>
 
-      
 </body>
 
 </html>
