--- a/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/new_post.html
+++ b/week12/my-site/weekly-assignmemt/weeklyAssignment/socialBoard/templates/new_post.html
@@ -28,7 +28,7 @@
                             <input type="submit" value="Submit" />
                         </form>
                 </div>
-                <a href="{url 'templates/index'}">Back To posts</a>
+                <a href="{%url 'index'%}">Back To posts</a>
             </div>
         </div>
         <br><br>
